style.css
@font-face {
  font-family: "Armata";
  src:
   url(./assets/fonts/Armata-Regular.woff) format("woff"),
   url(./assets/fonts/Armata-Regular.woff2) format("woff2");
}
@font-face {
  font-family: "Designer";
  src:
   url(./assets/fonts/DesignerRegular.woff) format("woff"),
   url(./assets/fonts/DesignerRegular.woff2) format("woff2");
}

:root {
  --fallback-font-stack:
    system-ui, -apple-system, BlinkMacSystemFont,'Segoe UI', Roboto,
    Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
}

:root.dark {
  --bg-color-primary: #161515;
  --bg-color-secondary: #0c0c0c;
  --color-primary: #dbc397;
  --color-secondary: #c2b391;
  --color-3: #e1d9d2;
  --color-4: #b2b2b2;
  --lines-color: #3e3e3e;
  --division-borders: 1px solid var(--lines-color);
  --logo-filter: brightness(0) invert(85%) sepia(5%) saturate(900%)
      hue-rotate(350deg) contrast(70%);
  --icon-filter: invert(60%);
  --hover-brightness-high: brightness(130%);
  --hover-brightness-low: brightness(130%);
  --hover-card-shadow: 5px 5px 15px black;
}

:root.light {
  --bg-color-primary: #e0e0e0;
  --bg-color-secondary: #d3d3d3;
  --color-primary: #4a6981;
  --color-secondary: #436376;
  --color-3: #373734;
  --color-4: #484343;
  --lines-color: #898a8b;
  --division-borders: 1px solid var(--lines-color);
  --logo-filter: brightness(0) invert(36%) sepia(33%) saturate(452%)
    hue-rotate(159deg) brightness(93%) contrast(92%);
  --icon-filter: invert(40%);
  --hover-brightness-high: brightness(80%);
  --hover-brightness-low: brightness(105%);
  --hover-card-shadow: 5px 5px 15px #b2b2b2;
}

/* CSS Reset */

*, *::before, *::after {
  box-sizing: border-box;
}

*:not(dialog) {
  margin: 0;
}

@media (prefers-reduced-motion: no-preference) {
  html {
    interpolate-size: allow-keywords;
  }
}

body {
  line-height: 1.5;
  -webkit-font-smoothing: antialiased;
}

img, picture, video, canvas, svg {
  display: block;
  max-width: 100%;
}

input, button, textarea, select {
  font: inherit;
}

p, h1, h2, h3, h4, h5, h6 {
  overflow-wrap: break-word;
}

p {
  text-wrap: pretty;
 }
h1, h2, h3, h4, h5, h6 {
  text-wrap: balance;
}

#root, #__next {
  isolation: isolate;
}

/* End of CSS reset */

body {
  background-color: var(--bg-color-primary);
  color: var(--color-3);
  font-family: Armata, var(--fallback-font-stack);
  font-size: 0.9rem;
  display: grid;
  grid-template-columns: minmax(230px, 3fr) minmax(150px, 1000px) minmax(270px, 4fr);
  grid-template-rows: 80px 35px 400px 1fr;
  height: 100vh;
}

header,
.project-nav,
.account-container,
.sidebar-section-name,
.announcement-card,
.trend-user-card,
.logo {
  border-bottom: var(--division-borders);
}

.user-welcome-banner,
.project-nav,
.project-control-buttons div {
  border-left: var(--division-borders);
}

.project-nav {
  border-right: var(--division-borders);
}

.articles-grid {
  border-left: var(--division-borders);
  border-right: var(--division-borders);
}

.logo  {
  grid-column: 1;
  grid-row: 1 / 3;
  display: flex;
  align-items: center;
  justify-content: center;
}

.logo a {
  align-items: center;
}

.logo img {
  height: 16px;
  width: auto;
  filter: var(--logo-filter); 
}

.logo div {
  color: var(--color-primary);
  font-family: Designer, var(--fallback-font-stack);
  font-size: 1.2rem;
  font-weight: bolder;
  transform: translateY(1.7px);
  margin-left: 5px;
}

header {
  grid-column: 2 / -1;
  grid-row: 1;
  display: grid;
  grid-template-columns: subgrid; 
}

header > div {
  display: flex;
}

.user-welcome-banner {
  grid-column: 1;
  align-items: center;
  padding-left: 20px;
}

.user-welcome-banner img {
  height: 50px;
  width: auto;
}

.user-welcome-banner > div {
  margin-left: 10px;
  padding-top: 10px;
}

.welcome-msg {
  font-size: 0.7rem;
}

.user-welcome-banner .user-name {
  font-size: 1.4rem;
  font-weight: bolder;
}

.header-buttons {
  grid-column: 2;
  justify-self: end;
  margin-right: 40px;
  align-items: center;
  gap: 15px;
  font-size: 0.7rem;
}

.header-buttons img {
  height: 20px;
  width: auto;
  filter: var(--icon-filter);
}

#theme-button {
  background-color: inherit;
  border: none;
}

.notification-button {
  align-items: center;
}

.notification-button div {
  padding-top: 2px;
  margin-left: 5px;
}

.logo a,
.header-buttons a,
.user-welcome-banner {
  display: flex;
  flex-wrap: nowrap;
}

.user-welcome-banner div:first-child {
  display: flex;
}

main {
  grid-column: 2;
  grid-row: 2 / -1;
  display: grid;
  grid-template-rows: 35px;
}

.project-nav {
  grid-row: 1;
  display: flex;
  justify-content: space-between;
}

.search-input {
  display: flex;
  align-items: center;
  margin-left: 20px;
  width: 100%;
}

.search-input img {
  filter: var(--icon-filter);
  height: 20px;
  width: auto;
}

input {
  appearance: none;
  border: none;
  background-color: var(--bg-color-primary);
  color: var(--color-3);
  font-size: 0.8rem;
  padding-left: 5px;
  margin-left: 5px;
  height: 34px;
  width: 100%;
}

input:focus {
  outline: none;
}

input::placeholder {
  color: var(--color-3);
  font-size: 0.8rem;
}

/* clears the 'X' from Chrome */
input[type="search"]::-webkit-search-decoration,
input[type="search"]::-webkit-search-cancel-button,
input[type="search"]::-webkit-search-results-button,
input[type="search"]::-webkit-search-results-decoration { display: none; }

.project-control-buttons {
  height: 100%;
  display: flex;
}

.project-control-buttons div {
  width: 100px;
}

.project-control-buttons a {
  display: flex;
  justify-content: center;
  align-items: center;
  height: 100%;
}

.articles-grid {
  background-color: var(--bg-color-secondary);
  grid-row: 2;
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
  grid-template-rows: repeat(auto-fit, 200px);
  grid-auto-rows: 200px;
  gap: 15px;
  padding: 20px;
}

.project-card {
  border: var(--division-borders);
  background-color: var(--bg-color-primary);
  padding: 20px;
}

.card-topbar {
  display: flex;
  justify-content: space-between;
  align-items: start;
  margin-bottom: 15px;
}

.card-topbar > div {
  color: var(--color-secondary);
  font-weight: bold;
}

.card-buttons {
  display: flex;
  gap: 10px;
  flex-shrink: 0;
  margin-left: 10px;
}

.card-buttons img {
  height: 15px;
  margin-top: 3px;
  width: auto;
  filter: var(--icon-filter);
}

.project-description {
  color: var(--color-3);
  font-size: 0.9em;
}

.menu-sidebar {
  grid-column: 1;
  grid-row: 3 / 5;
  display: grid;
  grid-template-rows: subgrid;
}

ul {
  padding: 0;
}

.menu-list.primary {
  grid-row: 1;
  align-self: center;
}

.menu-list.secondary {
  grid-row: 2;
}

.menu-item {
  padding: 7px 0 7px 40px;
}

.menu-item a {
  display: flex;
  flex-wrap: nowrap;
  align-items: center;
}

.menu-item img {
  height: 25px;
  width: auto;
  margin-right: 10px;
  filter: var(--icon-filter);
}

.info-sidebar {
  grid-column: 3;
  grid-row: 2 / -1;
  display: grid;
  grid-template-rows: subgrid;
}

.account-container {
  grid-row: 1;
  font-size: 0.8rem;
  padding-left: 20px;
  display: flex;
  align-items: center;
}

.account-container a {
  display: flex;
  flex-wrap: nowrap;
  align-items: center;
  justify-content: centeru;
}

.account-container img {
  height: 20px;
  width: auto;
  margin-right: 5px;
}


.account-container div:first-of-type {
  font-weight: bolder;
  margin-right: 5px;
  padding-right: 5px;
  border-right: var(--division-borders);
}

.sidebar-section-name {
  color: var(--color-secondary);
  font-size: 1.2rem;
  font-weight: bolder;
  padding: 20px 0 5px 20px;
}

.sidebar-section.announcements {
  grid-row: 2;
}

.announcement-card {
  padding: 10px 20px;
}

.announcement-card > * {
  max-width: 270px;
}

.ann-card-title {
  color: var(--color-3);
  font-size: 0.8rem;
  font-weight: bolder;
  margin-bottom: 5px;
}

.ann-card-content {
  color: var(--color-4);
  font-size: 0.7rem;
}

.sidebar-section.trending {
  grid-row: 3;
}

.trend-user-card a {
  font-size: 0.8rem;
  display: flex;
  align-items: center;
  margin: 10px 20px;
}

.trend-user-card img {
  margin-right: 10px;
  height: 40px;
  width: 40px;
}

.trend-user-name {
  font-weight: bold;
  color: var(--color-3);
}

.trend-user-description {
  font-size: 0.7rem;
  color: var(--color-4);
}

.user-name {
  color: var(--color-secondary);
}

img[src$=jpg] {
  border: var(--division-borders);
  border-radius: 100%;
}

a {
  color: inherit;
  text-decoration: none;
}

li {
  list-style: none;
}

.logo a:hover,
.header-buttons > *:hover,
.card-buttons a:hover,
.project-control-buttons a:hover {
  transition: 0.1s;
  transform: translateY(-2px);
  font-weight: bold;
  filter: var(--hover-brightness-high);
}

.menu-item:hover {
  font-weight: bold;
  background-color: var(--bg-color-primary);
  filter: var(--hover-brightness-low);
}

.trend-user-card a > div:hover,
.announcement-card:hover,
.account-container div:hover,
.search-input:hover {
  transition: 0.1s;
  font-weight: bold;
  filter: var(--hover-brightness-low);
}

.search-input:hover {
  filter: var(--hover-brightness-low);
}

.project-card:hover {
  transition: 0.1s;
  transform: translateY(-2px);
  filter: var(--hover-brightness-low);
  box-shadow: var(--hover-card-shadow);
}

/* MAKE MEDIA QUERRIES FOR TABLET, MOBILE AND 4K VIEWPORTS */

/* body * {
  border: 1px dotted yellow;
} */

@media (min-width: 1440px) {
  .logo a {
    margin-left: calc(100% - 230px); 
  }

  .menu-item {
    margin-left: calc(100% - 230px); 
  }
  
  .header-buttons {
    grid-column: 2;
    justify-self: end;
    margin-right: calc(100% - 230px);
    align-items: center;
    gap: 15px;
    font-size: 0.7rem;
  }
}

@media (max-width: 1000px) {
  body {
    grid-template-columns: 70px minmax(150px, 1000px) minmax(270px, 4fr);
  }
  .logo img {
    height: 25px;
  }
  .logo div {
    display: none;
  }
  .project-control-buttons div {
    width: 80px;
  }
  .menu-item {
    margin: 0;
    padding: 7px 0;
    display: flex;
    justify-content: center;
  }
  .menu-item img {
    margin-right: 0;
  }
  .menu-item div {
    display: none;
  }
}

